# pyHackeron

./: .gitignore  PROTOCOL.md  README.md  ble_daemon.py  monitor.py  one_daemon.py  one_web_server.py  tree.txt  web_server.py
ada/: README.md
ada/alire/: build_hash_inputs  settings.toml
ada/backends/: fetch_vendors.ps1
ada/config/: corelec_ada_config.ads  corelec_ada_config.h
ada/examples/: decode_smoke.adb  decode_smoke.gpr
ada/include/: corelec_ada.h  corelec_ble_backend.h
ada/src/: corelec-ble.adb  corelec-ble.ads  corelec-connection.adb  corelec-decoder.adb  corelec-decoder.ads  corelec-types.ads  corelec.ads
corelec/: clean_integration.py  core_logging.py  net_client.py  net_protocol.py  requirements_web.txt  requirements_windows.txt
corelec/Analyse/: database.py  model.py
corelec/BLE/: Acquisition.py  bluetooth.py  commands.py  frame.py  stream.py  types.py
corelec/ReverseEngineering/: alarm_codes.py  ctypes_frames.py  decoder.py
corelec/UI/: dashboard.py  qt_compat.py  reverse_ui.py  signals.py  widgets.py
docs/: ARCHITECTURE.md  INSTALL.md  INTEGRATIONS.md  NETWORK.md  UI.md
esp32/: CMakeLists.txt  Kconfig.projbuild  README.md  sdkconfig.defaults
esp32/main/: CMakeLists.txt  corelec_ble.c  corelec_ble.h  corelec_decoder.c  corelec_decoder.h  corelec_mqtt.c  corelec_mqtt.h  corelec_protocol.c  corelec_protocol.h  corelec_types.h  main.c
nas/: config.env.example  corelec-web.service  install_nas.sh
one/: README.md  one_ble.py  test_connnect.py
raspi/: config.env.example  corelec-daemon.service  install_raspi.sh
(+53 files in other folders)
